--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <div class='rps'>
+    <!--<div class='rps'>
         <label for='rps'>Choose your move</label>
             <select id='rps'>
                 <option value="">--Make a selection--</option>
@@ -18,6 +18,6 @@
                 <option value='Scissors'>Scissors</option>
             </select>
         <p></p>
-    </div>
+    </div>-->
 </body>
 </html>
