User interface added and nearly complete. Nearly all scripting is complete, may add reset button as well.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
-    <!--<div class='rps'>
-        <label for='rps'>Choose your move</label>
-            <select id='rps'>
-                <option value="">--Make a selection--</option>
-                <option value='Rock'>Rock</option>
-                <option value='Paper'>Paper</option>
-                <option value='Scissors'>Scissors</option>
-            </select>
-        <p></p>
-    </div>-->
+    <div class="game-choices" id="container">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissors">Scissors</button>
+    </div>
+
+    <div class="results" id="results">
+
+    </div>
 </body>
 </html>
