--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <title>Rock, Paper, Scissors</title>
 </head>
 <body>
+    <div class="reset"> <button id="reset">Reset</button></div>
+
     <div class="game-choices" id="container">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissors">Scissors</button>
     </div>
 
-    <div class="results" id="results">
+    <div class="results" id="results"></div>
 
-    </div>
 </body>
 </html>
